# curli

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  main.c
include/: helper.h  init.h  main.h  parser.c
src/: helper.c  init.c  main.c  mainCurly.c  parser.c  scheduler.c  setupDirCurly.c
src/include/: helper.h  init.h  main.h  parser.h  scheduler.h  struct.h
