AUTOMAKE_OPTIONS = foreign
VPATH = src include
bin_PROGRAMS = curli
AM_LDFLAGS = -pthread -lcurl
curli_SOURCES = src/main.c include/main.h src/helper.c include/helper.h src/init.c include/init.h src/parser.c include/parser.h include/scheduler.h src/scheduler.c src/setupDirCurly.c src/include/setupDirCurly.h src/mainCurly.c src/include/mainCurly.h
